--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Quiz Master Admin</title>
+
+    <!-- ✅ Bootstrap 5 CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
+
+    <!-- ✅ Vue app entry -->
     <script type="module" src="/src/main.js"></script>
+
+    <!-- ✅ Bootstrap JS (optional, only needed for dropdowns/modals/etc.) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
